# werk1112

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
docs/: index.html  robots.txt  sitemap.xml
scripts/: install.ps1  install.sh  package-release.sh  uninstall.ps1  uninstall.sh
src/: api.rs  api_keys.rs  banner.rs  cli.rs  lib.rs  model_store.rs  openai.rs  runtime_planner.rs
src/backend/: burn.rs  burn_phi3.rs  candle.rs  external.rs  llama_fast.rs  llama_server.rs  mod.rs
