[package]
name = "werk1112"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "werk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
crc32fast = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
burn = { version = "0.21.0", default-features = false, features = [
    "std",
], optional = true }
burn-store = { version = "0.21.0", default-features = false, features = [
    "std",
    "safetensors",
], optional = true }
candle-core = { version = "=0.9.2", default-features = false }
candle-nn = { version = "=0.9.2", default-features = false }
candle-transformers = { version = "=0.9.2", default-features = false }
clap = { version = "4.5.28", features = ["derive", "env"] }
indicatif = "0.17.11"
libc = "0.2"
safetensors = "0.4.5"
tower = { version = "0.5.2", features = ["util"] }
tokenizers = "0.21.4"
cudarc = { version = "0.19.8", default-features = false, optional = true }
llama_cpp = { version = "0.3.2", optional = true }
llama_cpp_sys = { version = "0.3.2", default-features = false, optional = true }

[features]
default = ["recommended"]
recommended = ["cuda"]
llama-cpp = ["dep:llama_cpp"]
llama-fast = ["dep:llama_cpp_sys"]
llama-legacy-cuda = [
    "llama-fast",
    "llama-cpp",
    "llama_cpp_sys/cuda",
    "llama_cpp/cuda",
]
llama-legacy-vulkan = [
    "llama-fast",
    "llama-cpp",
    "llama_cpp_sys/vulkan",
    "llama_cpp/vulkan",
]
burn-experimental = []
burn-runtime = ["burn-experimental", "dep:burn", "dep:burn-store", "burn/store"]
burn-cpu = ["burn-runtime", "burn/flex"]
burn-cuda = [
    "burn-runtime",
    "burn/cuda",
    "burn/fusion",
    "dep:cudarc",
    "cudarc/cuda-12080",
]
cuda = ["candle-cuda"]
# Compatibility alias only. Do not enable llama_cpp_sys/cuda_mmq here:
# llama_cpp_sys 0.3.2 hardcodes nvcc -arch=all, and forced MMQ fails device-link
# on older generated targets before it ever reaches RTX 3090 sm_86.
cuda-mmq = ["llama-legacy-cuda"]
candle-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = [
    "candle-cuda",
    "candle-core/cudnn",
    "candle-nn/cudnn",
    "candle-transformers/cudnn",
]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
vulkan = ["llama-legacy-vulkan"]

# Release bundles intentionally remain backend-neutral.
# Backend acceleration is opt-in for source/developer builds.
release-linux = []
release-windows = []
release-macos-apple-silicon = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
